# code-trace-tool

./: ANALYSIS_PROMPT.md  CREATE_EXTENSION.md  TRACE_VISUALIZER_DESIGN.md  data.json  package-lock.json
source-code/app/: CMakeLists.txt  system_test_app.c
source-code/driver/data-logger-driver/: Makefile  data_logger_driver.c
source-code/driver/epprom-driver/: Makefile  bbb_eeprom_driver.c
source-code/driver/led-driver/: Makefile  bbb_led_driver.c
source-code/driver/sensor-manager-driver/: Makefile  sensor_manager_driver.c
source-code/driver/shared-lib-driver/: Makefile  bbb_shared_lib.c  bbb_shared_lib.h
source-code/lib/led-lib/: CMakeLists.txt  bbb_led.c  bbb_led.h
source-code/lib/nvram-lib/: CMakeLists.txt  bbb_nvram.c  bbb_nvram.h
tool/: generate_data.js  output.json
tool/material/: function_calls.json
tool/web-app/: index.html  package-lock.json  package.json
tool/web-app/public/: function_calls.json  vfs.json
tool/web-app/src/: App.jsx  index.css
trace-visualizer-extension/: README.md  package-lock.json  package.json  trace-visualizer-0.0.1.vsix
trace-visualizer-extension/src/: extension.ts
trace-visualizer-extension/webview/: main.js
